--- a/src/main/resources/me/kanedenooijer/lttrs/style/main.css
+++ b/src/main/resources/me/kanedenooijer/lttrs/style/main.css
@@ -1,4 +1,9 @@
 * {
+    -fx-font-size: 16px;
+
+    -fx-white: white;
+    -fx-black: black;
+
     -fx-primary-100: #e9eef5;
     -fx-primary-200: #c9d7e8;
     -fx-primary-300: #a8bfd8;
