--- a/src/main/resources/me/kanedenooijer/lttrs/style/authentication.css
+++ b/src/main/resources/me/kanedenooijer/lttrs/style/authentication.css
@@ -17,6 +17,7 @@
 
 #form Label {
     -fx-font-weight: bold;
+    -fx-font-size: 16px;
 }
 
 #form TextField,
@@ -25,6 +26,7 @@
     -fx-border-color: -fx-black;
     -fx-border-width: 2px;
     -fx-border-radius: 5px;
+    -fx-font-size: 16px;
 }
 
 #form TextField:focused,
@@ -40,6 +42,7 @@
     -fx-text-fill: -fx-white;
     -fx-background-color: -fx-black;
     -fx-border-color: transparent;
+    -fx-font-size: 16px;
 }
 
 #primary-button:hover {
@@ -52,6 +55,7 @@
     -fx-text-fill: -fx-black;
     -fx-background-color: transparent;
     -fx-border-color: transparent;
+    -fx-font-size: 16px;
 }
 
 #secondary-button:hover {
