--- a/src/main/resources/me/kanedenooijer/lttrs/style/notification.css
+++ b/src/main/resources/me/kanedenooijer/lttrs/style/notification.css
@@ -1,8 +1,8 @@
 @import "main.css";
 
 #notification {
-    -fx-padding: 10;
-    -fx-spacing: 10;
+    -fx-padding: 10px;
+    -fx-spacing: 10px;
     -fx-alignment: center;
     -fx-background-radius: 10px;
 }
