--- a/src/main/resources/me/kanedenooijer/lttrs/style/notification.css
+++ b/src/main/resources/me/kanedenooijer/lttrs/style/notification.css
@@ -21,9 +21,14 @@
 
 #notification-text {
     -fx-text-fill: white;
+    -fx-font-size: 16px;
 }
 
 #notification-close {
     -fx-background-color: transparent;
     -fx-text-fill: white;
+    -fx-cursor: hand;
+    -fx-font-weight: bold;
+    -fx-underline: true;
+    -fx-font-size: 16px;
 }
