--- a/src/main/resources/me/kanedenooijer/lttrs/style/generic.css
+++ b/src/main/resources/me/kanedenooijer/lttrs/style/generic.css
@@ -16,15 +16,15 @@
 #left-bar {
     -fx-background-color: -fx-primary-400;
     -fx-padding: 20px;
-    -fx-spacing: 30px;
+    -fx-spacing: 20px;
 }
 
 .sidebar-item {
+    -fx-background-color: transparent;
+    -fx-border-color: transparent;
     -fx-spacing: 10px;
     -fx-alignment: center-left;
-}
-
-#left-bar Label {
+    -fx-cursor: hand;
     -fx-text-fill: -fx-white;
     -fx-font-size: 16px;
     -fx-font-weight: bold;
