--- a/src/main/resources/me/kanedenooijer/lttrs/style/notification.css
+++ b/src/main/resources/me/kanedenooijer/lttrs/style/notification.css
@@ -5,6 +5,7 @@
     -fx-spacing: 10px;
     -fx-alignment: center;
     -fx-background-radius: 10px;
+    -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.4), 20, 0, 5, 5);
 }
 
 #notification.success {
@@ -19,16 +20,16 @@
     -fx-background-color: #ef4444;
 }
 
-#notification-text {
-    -fx-text-fill: white;
+#notification-text,
+#notification-dismiss {
+    -fx-text-fill: -fx-white;
     -fx-font-size: 16px;
 }
 
-#notification-close {
+#notification-dismiss {
     -fx-background-color: transparent;
-    -fx-text-fill: white;
+    -fx-border-color: transparent;
     -fx-cursor: hand;
     -fx-font-weight: bold;
     -fx-underline: true;
-    -fx-font-size: 16px;
 }
