--- a/src/main/resources/me/kanedenooijer/lttrs/style/authentication.css
+++ b/src/main/resources/me/kanedenooijer/lttrs/style/authentication.css
@@ -1,5 +1,3 @@
-@import "main.css";
-
 #view {
     -fx-background-color: radial-gradient(center 50% 50%, radius 75%, -fx-primary-500, -fx-primary-900);
     -fx-alignment: center;
@@ -13,49 +11,15 @@
 }
 
 #form Label {
-    -fx-font-size: 16px;
     -fx-font-weight: bold;
 }
 
-#form TextField,
-#form PasswordField {
-    -fx-font-size: 16px;
-    -fx-font-weight: bold;
-    -fx-border-color: -fx-black;
-    -fx-border-width: 2px;
-    -fx-border-radius: 5px;
-}
-
-#form TextField:focused,
-#form PasswordField:focused {
-    -fx-border-color: -fx-primary-600;
-    -fx-focus-color: -fx-primary-200;
-    -fx-faint-focus-color: -fx-primary-200;
-}
-
-#primary-button,
-#secondary-button {
-    -fx-font-size: 16px;
-    -fx-font-weight: bold;
-    -fx-cursor: hand;
-    -fx-border-color: transparent;
-}
-
-#primary-button {
-    -fx-background-color: -fx-black;
-    -fx-text-fill: -fx-white;
-}
-
-#primary-button:hover {
-    -fx-background-color: -fx-primary-600;
-}
-
-#secondary-button {
+#form .secondary-button {
     -fx-background-color: transparent;
     -fx-text-fill: -fx-black;
     -fx-underline: true;
 }
 
-#secondary-button:hover {
+#form .secondary-button:hover {
     -fx-text-fill: -fx-primary-600;
 }
