--- a/src/main/resources/me/kanedenooijer/lttrs/style/notification.css
+++ b/src/main/resources/me/kanedenooijer/lttrs/style/notification.css
@@ -1,5 +1,3 @@
-@import "../main.css";
-
 #notification {
     -fx-padding: 10px;
     -fx-spacing: 10px;
@@ -20,16 +18,12 @@
     -fx-background-color: #ef4444;
 }
 
-#notification-text,
-#notification-dismiss {
+#notification Label,
+#notification Button {
     -fx-text-fill: -fx-white;
-    -fx-font-size: 16px;
 }
 
-#notification-dismiss {
+#notification #notification-dismiss {
     -fx-background-color: transparent;
-    -fx-border-color: transparent;
-    -fx-cursor: hand;
-    -fx-font-weight: bold;
     -fx-underline: true;
 }
